--- a/DekiApp_pyqt5/db_settings.json
+++ b/DekiApp_pyqt5/db_settings.json
@@ -1,4 +1,48 @@
 {
+  "company": "Deki",
+  "srv_files_filepath": "D:\\dekiApp\\Deki_ServerFiles",
+  "mainConstructions_columns": ["id",
+      "name",
+      "tag",
+      "serial_number",
+      "owner",
+      "localization",
+      "material",
+      "additional_info",
+      "subcontractor",
+      "sub_contact",
+      "construct_type",
+      "quality_norm",
+      "quality_class",
+      "tolerances_norm",
+      "tolerances_level",
+      "status",
+      "last_edited",
+      "realeased_by",
+      "series_size",
+      "created_time",
+      "created_by"],
+  "subConstructions_columns": ["id",
+      "parent_construction_id",
+      "main_construction_id",
+      "name",
+      "tag",
+      "serial_number",
+      "owner",
+      "localization",
+      "material",
+      "additional_info",
+      "subcontractor",
+      "sub_contact",
+      "construct_type",
+      "quality_norm",
+      "quality_class",
+      "tolerances_norm",
+      "tolerances_level",
+      "tier",
+      "update_time",
+      "update_by"
+      ],
   "modelWelds_columns": ["id",
     "belonging_construction_tag",
     "belonging_construction_ID",
